# ChartOcr

./: .gitignore  .gitmodules  README.md  dete_result.json  main.py  pyproject.toml
config/: __init__.py  baseconfig.py  detector.toml  extractor.toml  pixel_transform.toml
model/: __init__.py  chartocr.py
module/: __init__.py
module/detector/: __init__.py  chart_element_detector.py
module/detector/chart_element_detector/: __init__.py  detector.py
module/detector/chart_element_detector/config/: cascade_rcnn_swin-t_fpn_LGF_VCE_PCE_coco_focalsmoothloss.py
module/detector/chart_element_detector/utils/: __init__.py  types.py
module/detector/result/result_json/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+10 more)
module/extractor/: __init__.py
module/extractor/line_element_extractor/: __init__.py  extractor.py
module/extractor/lineformer_extector/: __init__.py  extector.py  extractor.py  infer.py  line_utils.py  lineformer_swin_t_config.py
module/ocr/: __init__.py  ocr_model.py
module/pixeltransform/: __init__.py  pixel_transform.py
module/transform/: pixel_transform.py
utils/: __init__.py  tools.py  types.py
(+1 files in other folders)
