[project]
name = "chartocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "bresenham>=0.2.1",
    "chardet>=5.2.0",
    "matplotlib>=3.7.5",
    "opencv-python>=4.12.0.88",
    "openmim>=0.3.9",
    "pillow>=10.4.0",
    "scikit-image>=0.21.0",
    "scipy==1.9.3",
    "setuptools>=75.3.2",
    "torch==1.13.1",
    "torchvision==0.14.1",
    "tqdm>=4.67.1",
]
